--- a/config/crd/bases/appstudio.redhat.com_integrationscenarios.yaml
+++ b/config/crd/bases/appstudio.redhat.com_integrationscenarios.yaml
@@ -36,9 +36,32 @@ spec:
           spec:
             description: IntegrationScenarioSpec defines the desired state of IntegrationScenario
             properties:
+              application:
+                description: Application that's associated with the IntegrationScenario
+                type: string
               bundle:
                 description: Tekton Bundle where to find the pipeline
                 type: string
+              environments:
+                description: Environments that will be utilized by the test pipeline
+                items:
+                  description: TestEnvironment contains the name and values of a Test
+                    environment
+                  properties:
+                    name:
+                      type: string
+                    testName:
+                      type: string
+                    value:
+                      items:
+                        type: string
+                      type: array
+                  required:
+                  - name
+                  - testName
+                  - value
+                  type: object
+                type: array
               params:
                 description: Params to pass to the pipeline
                 items:
@@ -60,6 +83,7 @@ spec:
                 description: Release Tekton Pipeline to execute
                 type: string
             required:
+            - application
             - pipeline
             type: object
           status:
