fix(HACBS-1341): change the apiGroup for pipelineRun RBACs
* Change the apiGroup for pipelineRun RBACs to tekton.dev

Signed-off-by: dirgim <kpavic@redhat.com>

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -52,7 +52,7 @@ rules:
   verbs:
   - update
 - apiGroups:
-  - appstudio.redhat.com
+  - tekton.dev
   resources:
   - pipelineRuns
   verbs:
@@ -64,13 +64,13 @@ rules:
   - update
   - watch
 - apiGroups:
-  - appstudio.redhat.com
+  - tekton.dev
   resources:
   - pipelineRuns/finalizers
   verbs:
   - update
 - apiGroups:
-  - appstudio.redhat.com
+  - tekton.dev
   resources:
   - pipelineRuns/status
   verbs:
