--- a/config/kcp-rbac/role.yaml
+++ b/config/kcp-rbac/role.yaml
@@ -38,7 +38,7 @@ rules:
   verbs:
   - update
 - apiGroups:
-  - appstudio.redhat.com
+  - tekton.dev
   resources:
   - pipelineRuns
   verbs:
@@ -50,13 +50,13 @@ rules:
   - update
   - watch
 - apiGroups:
-  - appstudio.redhat.com
+  - tekton.dev
   resources:
   - pipelineRuns/finalizers
   verbs:
   - update
 - apiGroups:
-  - appstudio.redhat.com
+  - tekton.dev
   resources:
   - pipelineRuns/status
   verbs:
