--- a/config/webhook/manifests.yaml
+++ b/config/webhook/manifests.yaml
@@ -22,7 +22,7 @@ webhooks:
     operations:
     - CREATE
     resources:
-    - integrationtestscenario
+    - integrationtestscenarios
   sideEffects: None
 ---
 apiVersion: admissionregistration.k8s.io/v1
